--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.03.25 18:23:41<br />
+<b>start</b> - 2023.03.26 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
@@ -31,7 +31,7 @@ Canada_Skull kihagyva (100%), <br />
 Netherlands_VlagEcht kihagyva (100%), <br />
 Netherlands_CittaslowEcht kihagyva (100%), <br />
 USA_GreenvilleGreenWave kihagyva (100%), <br />
-Australia_QueensGambit-Horse, not updated, 0.46728971962618004<br />
+Australia_QueensGambit-Horse, <b>hiba</b> a táblázat megnyitásakor, RESOURCE_EXHAUSTED, 24<br />
 USA_CommerceBarnyard kihagyva (100%), <br />
 USA_UtahBeehive, not updated, 0.0<br />
 Canada_DinosaurPark, not updated, 0.0<br />
@@ -197,7 +197,7 @@ Hungary_KodalysViolin kihagyva (100%), <br />
 Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
 Hungary_64color kihagyva (100%), <br />
 Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
+Hungary_ShieldMiskolc, <b>hiba</b> a táblázat megnyitásakor, INTERNAL, 31<br />
 Hungary_ShieldEger, not updated, 0.0<br />
 Hungary_MunzeeLogo kihagyva (100%), <br />
 Hungary_GreatChurch kihagyva (100%), <br />
@@ -488,7 +488,7 @@ Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
 Germany_ErnieInVolksdorf, not updated, 0.0<br />
 Germany_Quietscheentchen kihagyva (100%), <br />
 Germany_Hammaburg, not updated, 0.0<br />
-Germany_FCStPauli, not updated, 0.0799999999999983<br />
+Germany_FCStPauli, not updated, 0.5600000000000023<br />
 Germany_YinYangNeustadt, not updated, 0.0<br />
 Denmark_TheRainbowwaveInHillested, not updated, 0.0<br />
 Denmark_SoparkenMaribo kihagyva (100%), <br />
@@ -752,288 +752,4 @@ Portugal_Saab9xInMadeira kihagyva (100%), <br />
 Netherlands_FlashEilandVanDeMeijer, not updated, 1.0<br />
 USA_WestCovinaCaliforniaFrog kihagyva (100%), <br />
 USA_ZeecretBriefcaseInIndpendence, not updated, 1.0<br />
-UnitedKingdom_ISpyASpyInStockport, not updated, 0.5799999999999983<br />
-USA_SpyTrain kihagyva (100%), <br />
-USA_GShiftyJewels62West, not updated, 0.0<br />
-USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
-Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass kihagyva (100%), <br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.0<br />
-USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.8999999999999915<br />
-USA_EllisCreekOwl kihagyva (100%), <br />
-USA_EllisCreekOwlFlats, not updated, 0.0<br />
-USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
-USA_GardenGirl kihagyva (100%), <br />
-USA_TexasGoldenTicket kihagyva (100%), <br />
-USA_TexasGoldenTicketFlats, not updated, 0.0<br />
-USA_MarshallMallard kihagyva (100%), <br />
-USA_UncutDiamond kihagyva (100%), <br />
-USA_UncutDiamondFlats kihagyva (100%), <br />
-USA_BabyGroot kihagyva (100%), <br />
-USA_WeatherfordXmasOwl kihagyva (100%), <br />
-USA_AvocatoAvocato kihagyva (100%), <br />
-USA_AvocatoToy, not updated, 0.0<br />
-USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
-USA_BundtiniTrail kihagyva (100%), <br />
-USA_JewelOfAHeart kihagyva (100%), <br />
-USA_LetsTalkAbundtLove kihagyva (100%), <br />
-USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown kihagyva (100%), <br />
-USA_VelmaCrossbow, not updated, 0.0<br />
-USA_Shaggy, not updated, 0.0<br />
-USA_MysteryMachine, not updated, 0.0<br />
-USA_FortWorthFighterJet, not updated, 0.0<br />
-USA_TCUHornedFrogs, not updated, 0.0899999999999892<br />
-USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.0<br />
-USA_TexasGeowoodstock2019 kihagyva (100%), <br />
-USA_FortWorthSucculents kihagyva (100%), <br />
-USA_RobVsMatt, not updated, 0.0<br />
-USA_BrightColoredHorse, not updated, 0.0<br />
-USA_BrightColoredHorseFlats, not updated, 0.0<br />
-USA_RuhRohRAGGY, not updated, 0.0<br />
-USA_PrizeWheel kihagyva (100%), <br />
-USA_EvoHedgehog kihagyva (100%), <br />
-USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, not updated, 0.4700000000000024<br />
-USA_GreenvillesAmethystRoad kihagyva (100%), <br />
-USA_SaintMarysHeart kihagyva (100%), <br />
-USA_GreenvilleOhioSpiritTrophy, not updated, 1.0<br />
-USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
-USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
-USA_GreenvilleZodiacWheels kihagyva (100%), <br />
-USA_GreenvilleRUMCircle, not updated, 0.0<br />
-USA_GreenvilleFlatSurprise, not updated, 0.8200000000000074<br />
-USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
-USA_GreenvilleSouthCarolina, not updated, 0.0<br />
-USA_JaysvilleFlatCircles, not updated, 0.0<br />
-USA_CCTXZeeCret kihagyva (100%), <br />
-USA_DecaturHearts kihagyva (100%), <br />
-USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
-UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
-UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.0<br />
-USA_ScoobyDooCrossbow, not updated, 0.0<br />
-USA_TexasStateFlag kihagyva (100%), <br />
-USA_Geowoodstock2019 kihagyva (100%), <br />
-USA_MansfieldMuru, not updated, 0.0<br />
-USA_CedarRapidsIAFlag, not updated, 0.0<br />
-Hungary_JewelAndColor kihagyva (100%), <br />
-USA_CRMunzee6thBirthday kihagyva (100%), <br />
-USA_CRAirMysteryTrail kihagyva (100%), <br />
-USA_CRMunzFit20 kihagyva (100%), <br />
-USA_HayesBattlefield kihagyva (100%), <br />
-USA_CREgyptianZodiac kihagyva (100%), <br />
-USA_CherryBombCedarRapids kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
-USA_GCandyCane kihagyva (100%), <br />
-USA_GCandyCaneFlats, not updated, 0.9000000000000057<br />
-USA_GShamrock kihagyva (100%), <br />
-USA_GShamrockFlats, not updated, 0.3500000000000014<br />
-USA_GPumpkin kihagyva (100%), <br />
-USA_GPumpkinFlats, not updated, 0.37000000000000455<br />
-USA_Mauhaus kihagyva (100%), <br />
-USA_GToyotaCrossbows, not updated, 0.35999999999999943<br />
-USA_GToyotaCrossbowsBiggy, not updated, 0.9199999999999875<br />
-USA_GToyota kihagyva (100%), <br />
-USA_GToyotaFlats, not updated, 0.9699999999999989<br />
-USA_GJewelBelt, not updated, -0.21000000000000796<br />
-USA_GEvoBelt, not updated, 0.3400000000000034<br />
-USA_GBypassMixed kihagyva (100%), <br />
-USA_G62WestEvo, not updated, 0.8300000000000001<br />
-USA_NoelridgeMysteryFlats kihagyva (100%), <br />
-USA_GSouthland, not updated, 0.1999999999999993<br />
-USA_GMorning, not updated, 0.7699999999999996<br />
-USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.8500000000000014<br />
-USA_PotOfGold, not updated, 0.0<br />
-USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.6700000000000017<br />
-USA_OwensboroRiverboatFlats, not updated, 0.8399999999999999<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.6600000000000037<br />
-Netherlands_RobAndLouise kihagyva (100%), <br />
-USA_TaylorSwiftTheEras, not updated, 0.0<br />
-USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees kihagyva (100%), <br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.7999999999999972<br />
-USA_CelticKnot, not updated, 0.6000000000000014<br />
-USA_STLPirateShip, not updated, 0.7700000000000102<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.25<br />
-USA_STLPokeball, not updated, 0.6000000000000014<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
-USA_Woodpecker, not updated, 0.8599999999999994<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-USA_YanktonIceCream kihagyva (100%), <br />
-UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
-Australia_BendigoIcyPole kihagyva (100%), <br />
-USA_SouthPadreIslandKOA, not updated, 0.0<br />
-USA_HeartOfStCharles kihagyva (100%), <br />
-USA_ShawsGardenRose kihagyva (100%), <br />
-USA_WhiteCastleValentine kihagyva (100%), <br />
-USA_Ring kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
-USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat kihagyva (100%), <br />
-USA_GentleDoctorAnimals kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
-USA_BreadCo kihagyva (100%), <br />
-USA_Swon kihagyva (100%), <br />
-USA_ThankYouTruckers kihagyva (100%), <br />
-USA_CherryMini kihagyva (100%), <br />
-USA_BlossomMini kihagyva (100%), <br />
-USA_MarchMini kihagyva (100%), <br />
-USA_PiDay2022 kihagyva (100%), <br />
-USA_SpringTree kihagyva (100%), <br />
-USA_HeavySmokeBBQ kihagyva (100%), <br />
-USA_BowleroLaserTag kihagyva (100%), <br />
-USA_BohrerPark kihagyva (100%), <br />
-USA_Snowflake kihagyva (100%), <br />
-USA_WebsterGrovesStatesmen kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesVirtuals kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesFlats kihagyva (100%), <br />
-USA_WinterTree kihagyva (100%), <br />
-USA_AutumnTree kihagyva (100%), <br />
-USA_ZeeOps kihagyva (100%), <br />
-USA_StPetersChess kihagyva (100%), <br />
-USA_PiratesRum kihagyva (100%), <br />
-USA_NobHillFishTank kihagyva (100%), <br />
-USA_ChristmasSleigh kihagyva (100%), <br />
-USA_StLouisChristmasStockingVirtual kihagyva (100%), <br />
-USA_StLouisChristmasStockingFlat kihagyva (100%), <br />
-USA_JimmyBeagle kihagyva (100%), <br />
-USA_PirateAxe kihagyva (100%), <br />
-USA_ShamrocksMug kihagyva (100%), <br />
-USA_Halloween kihagyva (100%), <br />
-USA_AutumnMoon kihagyva (100%), <br />
-USA_Rosesquirrel kihagyva (100%), <br />
-USA_Campfire kihagyva (100%), <br />
-USA_GiftOfLife kihagyva (100%), <br />
-USA_PirateLongsword kihagyva (100%), <br />
-USA_WarriorSpear kihagyva (100%), <br />
-USA_PizzaOnTheHill kihagyva (100%), <br />
-USA_StLouisFlamingo kihagyva (100%), <br />
-USA_PirateCrossbow kihagyva (100%), <br />
-USA_Munzee10 kihagyva (100%), <br />
-USA_SybergsShark kihagyva (100%), <br />
-USA_ChuckECheesePizza kihagyva (100%), <br />
-USA_9Mile kihagyva (100%), <br />
-USA_MothersDayFlowerPot kihagyva (100%), <br />
-USA_TurtlePark kihagyva (100%), <br />
-USA_StacyParkFlower kihagyva (100%), <br />
-USA_CottlevilleDragonfly kihagyva (100%), <br />
-USA_SchaeferParkBugs kihagyva (100%), <br />
-USA_StLouisCardinalsPart2, not updated, 0.0<br />
-USA_TattooedDog kihagyva (100%), <br />
-USA_TiemeyerPatch kihagyva (100%), <br />
-USA_CincoDeMayoTaco kihagyva (100%), <br />
-USA_OverlandCar kihagyva (100%), <br />
-USA_FriscoTrain kihagyva (100%), <br />
-USA_StLouisAirplane kihagyva (100%), <br />
-USA_PiDayPie kihagyva (100%), <br />
-USA_AfftonHorse kihagyva (100%), <br />
-USA_KirkwoodAnchor kihagyva (100%), <br />
-USA_WalpelhorstHorse kihagyva (100%), <br />
-USA_StCharlesAnchor kihagyva (100%), <br />
-USA_Birdhouse kihagyva (100%), <br />
-USA_Cardinals kihagyva (100%), <br />
-USA_FlatFriends kihagyva (100%), <br />
-USA_FlatLouInStLou kihagyva (100%), <br />
-USA_FlatLouInStLouPink, not updated, 0.0<br />
-USA_Friendship kihagyva (100%), <br />
-USA_HappyKrautMemorial kihagyva (100%), <br />
-USA_OFallonSoccer kihagyva (100%), <br />
-USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-USA_BuckeyesGradCap, not updated, 0.0<br />
-Germany_SmellsLikeZeeSpiritKurtCobain, not updated, 0.030000000000001137<br />
-Poland_BirthdayCake kihagyva (100%), <br />
-Germany_WipperfurtherSternchen, not updated, 0.0<br />
-UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
-USA_SummerSun kihagyva (100%), <br />
-USA_RosesquirrelsAutismPuzzlePiece kihagyva (100%), <br />
-USA_StLouisCardinalsOFallon kihagyva (100%), <br />
-USA_ShrewsburyNightVisionGoggles kihagyva (100%), <br />
-USA_SouthCountyChristmasTree kihagyva (100%), <br />
-USA_TucsonChess, not updated, 0.0<br />
-USA_SpongyMemorial kihagyva (100%), <br />
-USA_StLouisParrot kihagyva (100%), <br />
-USA_ColorStPeters kihagyva (100%), <br />
-USA_MarylandHeightsMORUM kihagyva (100%), <br />
-USA_MissouriBluebird kihagyva (100%), <br />
-Canada_RichmondHillMoosemate, not updated, 0.0<br />
-USA_PiDay2023 kihagyva (100%), <br />
-USA_SpringCherryBlossom kihagyva (100%), <br />
-USA_AppleMini, not updated, 0.0<br />
-USA_BevoMill kihagyva (100%), <br />
-USA_VanderbiltPuppy kihagyva (100%), <br />
-USA_PiecesMeeple kihagyva (100%), <br />
-USA_LogCabinQuilt kihagyva (100%), <br />
-USA_SnowmanSaintPeters kihagyva (100%), <br />
-USA_WinterDeadBranch kihagyva (100%), <br />
-USA_CandyCaneLane kihagyva (100%), <br />
-USA_MiniSnowflake2 kihagyva (100%), <br />
-USA_BirdhousesGoldfinch kihagyva (100%), <br />
-USA_PecanMini kihagyva (100%), <br />
-USA_AcornMini kihagyva (100%), <br />
-USA_MizzouTiger, not updated, 0.0<br />
-USA_CamoHeart, not updated, 0.0<br />
-USA_ColumbiaFlatLou, not updated, 0.0<br />
-USA_ColumbiaFlatLouPink, not updated, 0.0<br />
-USA_FriscoPark kihagyva (100%), <br />
-USA_GRMeijerFarm, not updated, 0.0<br />
-USA_SecondaryComplexEverything, not updated, 0.0<br />
-USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
-USA_GrandRapidsCornucopia kihagyva (100%), <br />
-Germany_TheGardenHedge kihagyva (100%), <br />
-USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
-Canada_YellowWarbler, not updated, 0.0<br />
-USA_FlyingMUNZkey, not updated, 0.0<br />
-USA_ArchdaleButterfly kihagyva (100%), <br />
-<b>stop</b> - 2023.03.25 18:56:42<br />
-összesen 1980<br />
+UnitedKingdom_ISpyASpyInStockport, <b>updated</b>, 148, <a href="https://www.munzee.com/map/gcqx85gu8/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/UnitedKingdom_ISpyASpyInStockport.json" target="_blank">json</a><br />
